--- a/skins/default/skin.css
+++ b/skins/default/skin.css
@@ -1,7 +1,36 @@
+#minefield {
+	float:left;
+}
+
 /* This is the minefield container */
 .jQueryMinefield.default .minefield {
 	float:left;
-	border:10px solid blue;
+	-moz-box-shadow: 0px 0px 15px #415fa7; /* FF3.5+ */
+	-webkit-box-shadow: 0px 0px 15px #415fa7; /* Saf3.0+, Chrome */
+	box-shadow: 0px 0px 15px #415fa7; /* Opera 10.5, IE 9.0 */
+}
+
+.jQueryMinefield.default .heading {
+	height: 53px;
+}
+.jQueryMinefield.default .heading .restart {
+	margin:0 auto;
+	width:48px;
+	height:48px;
+	background:url(images/MinesweeperSprite.png) no-repeat 0px -31px;
+    -moz-border-radius: 3px; /* FF1+ */
+	-webkit-border-radius: 3px; /* Saf3+, Chrome */
+    border-radius: 3px; /* Opera 10.5, IE 9 */
+	-moz-box-shadow: 3px 3px 4px #415fa7; /* FF3.5+ */
+	-webkit-box-shadow: 3px 3px 4px #415fa7; /* Saf3.0+, Chrome */
+	box-shadow: 3px 3px 4px #415fa7; /* Opera 10.5, IE 9.0 */
+}
+
+.jQueryMinefield.default .heading .restart.thinking {
+	background:url(images/MinesweeperSprite.png) no-repeat -48px -31px;	
+}
+.jQueryMinefield.default .heading .restart.gameover {
+	background:url(images/MinesweeperSprite.png) no-repeat -96px -31px;	
 }
 
 /* This is a mine/block in the minefield */
@@ -10,7 +39,7 @@
 	height: 23px;
 	padding:1px;
 	border: 1px solid black;
-	background: blue;
+	background: #415fa7;
 	float:left;
 	font-size:12px;
 }
@@ -34,4 +63,8 @@
 }
 .jQueryMinefield.default .minefield DIV.question {
 	background:#fff url(images/MinesweeperSprite.png) no-repeat -22px -2px;
+}
+/* This is for mines that were flagged correctly after the game ends and all mines are revealed */
+.jQueryMinefield.default .minefield DIV.flagged.mine {
+	background:#fff url(images/MinesweeperSprite.png) no-repeat -100px 0;
 }
